--- a/wiki/_posts/2016-09-26-app-push.md
+++ b/wiki/_posts/2016-09-26-app-push.md
@@ -8,3 +8,88 @@ tag: 服务端开发文档
 
 * content
 {:toc}
+
+
+## 1.	推送消息
+
+* https请求方式: POST
+
+
+` https://api.open.jituancaiyun.com/openapi/message/common/send?accessToken=ACCESSTOKEN `
+
+
+* 消息类型：
+
+消息类型 | 描述 | type
+------------ | ------------- | -------------
+简单Link消息 | 	带有消息头，消息描述和跳转链接 |  msg_link
+图文消息 | 富文本消息（可在允许范围自定义）(敬请期待) | msg_box
+文本消息 | 简单文本 | msg_text
+图片消息 | 简单图片消息(不能自定义)(敬请期待) | msg_pic
+语音消息 | 简单语音消息(不能自定义)(敬请期待) | msg_voice
+
+* 接口返回demo：
+
+` {
+    "status":"0(开放平台处理成功)",
+    "success":"false(只要有一个失败，我就是false)",
+    "invaliduser": "我是发送失败的uid，多个使用半角|分开",
+    "invaliddept": "我是发送失败的部门id，多个使用半角|分开",
+    "message": "我是失败原因"
+    } `
+
+### 1.1	简单Link消息
+
+* 请求DEMO
+
+` {
+    "touser":"我是消息接收者的uid",
+    "todept":"我是接受者部门id",
+    "msgtype": "msg_link",
+    "link": {
+        "targetUrl": "我是消息中点击跳转的地址（eg:https://www.taobao.com)",
+        "title":"我是消息header(长度20个字符，超过20个字符被隐藏)",
+        "desc":"我是消息body(长度50个字符，超过50个字符被隐藏,支持换行符)",
+       }
+    } `
+
+* 参数说明
+
+参数 | 描述 | 是否必须
+------------ | ------------- | -------------
+touser | 接收消息的人员列表(多个使用半角|分开)(与todept职能存在一个) |  是
+todept | 接收消息的部门列表(多个使用半角|分开)(与touser职能存在一个) | 是
+msgtype | 消息类型，link消息固定为msg_link | 是
+targetUrl | 点击跳转的地址 |  是
+title | 消息标题 | 是
+desc | 消息描述 | 是
+
+### 1.2	图文消息(敬请期待)
+
+### 1.3	文本消息
+
+* 请求DEMO
+
+` {
+    "touser":"我是消息接收者的uid",
+    "todept":"我是接受者部门id",
+    "msgtype": "msg_text",
+    "text": {
+        "title":"我是消息header(长度20个字符，超过20个字符被隐藏)",
+        "desc":"我是消息body(长度50个字符，超过50个字符被隐藏,支持换行符)",
+       }
+    } `
+
+* 参数说明
+
+参数 | 描述 | 是否必须
+------------ | ------------- | -------------
+touser | 接收消息的人员列表(多个使用半角|分开)(与todept职能存在一个) |  是
+todept | 接收消息的部门列表(多个使用半角|分开)(与touser职能存在一个) | 是
+msgtype | msg_text | 是
+title | 消息标题 | 是
+desc | 消息描述 | 是
+
+### 1.4	图片消息(敬请期待)
+
+### 1.5	语音消息(敬请期待)
