--- a/wiki/_posts/2016-09-27-DEMO.md
+++ b/wiki/_posts/2016-09-27-DEMO.md
@@ -8,3 +8,8 @@ tag: DEMO & SDK
 
 * content
 {:toc}
+
+
+[Java Common Github DEMO](http://https://github.com/jituancaiyun/openapi-demo)
+
+[Java SDK Github DEMO](http://https://github.com/jituancaiyun/openapi-demo)
