--- a/_posts/2016-09-24-app-auth.md
+++ b/_posts/2016-09-24-app-auth.md
@@ -31,7 +31,7 @@ accessToken | 是 | 接口访问凭据
 
 ```
 
-{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技",orgId:1}, {"orgName":"芒果医生",orgId:2}, {"orgName":"阿里巴巴",orgId:3}...]}}
+{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技有限公司",orgId:1}, {"orgName":"宁波移动",orgId:2}, {"orgName":"杭州移动",orgId:3}...]}}
 
 ```
 
