bugfix for demo url

--- a/_posts/2016-09-27-DEMO.md
+++ b/_posts/2016-09-27-DEMO.md
@@ -10,6 +10,6 @@ tag: DEMO&SDK
 {:toc}
 
 
-[Java Common Github DEMO](http://https://github.com/jituancaiyun/openapi-demo)
+[Java Common Github DEMO](https://github.com/jituancaiyun/openapi-demo)
 
-[Java SDK Github DEMO](http://https://github.com/jituancaiyun/openapi-demo)
+[Java SDK Github DEMO](https://github.com/jituancaiyun/openapi-demo)
