modified:   _posts/2016-09-24-app-auth.md 	modified:   _posts/2016-09-25-app-accesstoken.md 	modified:   _posts/2016-09-27-app-contact.md 	modified:   _posts/2016-11-11-app-meetinginvite.md 	modified:   _posts/2016-11-11-app-teamremind.md

--- a/_posts/2016-09-24-app-auth.md
+++ b/_posts/2016-09-24-app-auth.md
@@ -29,10 +29,28 @@ accessToken | 是 | 接口访问凭据
 正常情况下开放平台会返回下述JSON数据包给用户
 
 
-```
-
-{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技有限公司",orgId:1}, {"orgName":"宁波移动",orgId:2}, {"orgName":"杭州移动",orgId:3}...]}}
-
+```javascript
+{
+    "status": 0,
+    "data": {
+        "uid": "REAM123",
+        "name": "张三",
+        "orgList": [
+            {
+                "orgName": "杭州讯盟科技有限公司",
+                "orgId": 1
+            },
+            {
+                "orgName": "宁波移动",
+                "orgId": 2
+            },
+            {
+                "orgName": "杭州移动",
+                "orgId": 3
+            }
+        ]
+    }
+}
 ```
 
 参数 | 描述
@@ -46,7 +64,9 @@ orgId | 用户所在机构id
 
 错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）
 
-```
-{"status":4003,"message":"accessToken超时，请重新获取"}
-
+```javascript
+{
+	"status":4003,
+	"message":"accessToken超时，请重新获取"
+}
 ```
